@@ -1097,16 +1097,16 @@ SecAuditLogStorageDir logs/audit
     </section>
 
     <section>
-      <title><literal>SecGeoLookupsDb</literal></title>
+      <title><literal>SecGeoLookupDb</literal></title>
 
       <para><emphasis>Description:</emphasis> Defines the path to the
       geograpical database file.</para>
 
       <para><emphasis>Syntax:</emphasis> <literal
-      moreinfo="none">SecGeoLookupsDb /path/to/db</literal></para>
+      moreinfo="none">SecGeoLookupDb /path/to/db</literal></para>
 
       <para><emphasis>Example Usage:</emphasis> <literal
-      moreinfo="none">SecGeoLookupsDb
+      moreinfo="none">SecGeoLookupDb
       /usr/local/geo/data/GeoLiteCity.dat</literal></para>
 
       <para><emphasis>Processing Phase:</emphasis> N/A</para>
@@ -4608,7 +4608,7 @@ SecRule ARGS:route "!<emphasis>@endsWith %{REQUEST_ADDR}</emphasis>" t:none,deny
       in the <literal moreinfo="none">GEO</literal> collection.</para>
 
       <para>You must provide a database via <literal
-      moreinfo="none">SecGeoLookupsDb</literal> before this operator can be
+      moreinfo="none">SecGeoLookupDb</literal> before this operator can be
       used.</para>
 
       <para>See the <literal moreinfo="none">GEO</literal> variable for an
